<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEntityActivity">

    <EditText
        android:id="@+id/editStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:hint="@string/hint_start_date"
        android:importantForAutofill="no"
        android:inputType="date"
        android:onClick="showStartDatePickerDialog"
        app:layout_constraintEnd_toStartOf="@+id/editEndDate"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/hint_end_date"
        android:importantForAutofill="no"
        android:inputType="date"
        android:onClick="showEndDatePickerDialog"
        app:layout_constraintBaseline_toBaselineOf="@+id/editStartDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editStartDate" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group_flow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/editNotes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip_group_mood"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipLight"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/light"
            app:chipIconEnabled="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipMedium"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/medium"
            app:chipIconEnabled="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipHeavy"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/heavy"
            app:chipIconEnabled="true" />

    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group_mood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/chip_group_flow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editStartDate"
        app:layout_constraintVertical_chainStyle="spread"
        app:singleSelection="false">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip2"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/happy"
            app:chipIcon="@drawable/chip_sentiment_satisfied_white_24dp"
            app:chipIconEnabled="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip3"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/so_so"
            app:chipIcon="@drawable/chip_sentiment_neutral_white_24dp"
            app:chipIconEnabled="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip4"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/sad"
            app:chipIcon="@drawable/chip_sentiment_dissatisfied_white_24dp"
            app:chipIconEnabled="true" />

    </com.google.android.material.chip.ChipGroup>

    <EditText
        android:id="@+id/editNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_notes"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip_group_flow" />

</androidx.constraintlayout.widget.ConstraintLayout>