<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="episode" type="com.example.telle.data.Episode" />
        <variable name="epTimeInterval" type="String" />
        <variable name="epCycle" type="String" />
        <variable name="epNotes" type="String" />
        <!-- For setting the onclicklistener -->
        <variable
            name="clickListener"
            type="android.view.View.OnClickListener"/>
        <variable
            name="episodeRepository"
            type="com.example.telle.data.EpisodeRepository"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Use a CardView to display each period -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="4dp"
            android:onClick="@{clickListener}">

            <!-- Use a ConstraintLayout to position the elements in the cards -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- Start date-->
                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:hint="@string/hint_time_interval"
                    android:text="@{epTimeInterval}"
                    android:textAppearance="?attr/textAppearanceSubtitle2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- End date
                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/duration"
                    android:text="@{epEndDate}"
                    android:textAppearance="?attr/textAppearanceListItemSecondary"
                    app:layout_constraintEnd_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />-->

                <!-- Cycle -->
                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:hint="@string/current_cycle"
                    android:text="@{epCycle}"
                    android:textAppearance="?attr/textAppearanceSubtitle2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/hint_notes"
                    android:text="@{epNotes}"
                    app:layout_constraintStart_toStartOf="@+id/textView1"
                    app:layout_constraintTop_toBottomOf="@+id/textView1" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <!-- Notes -->

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</layout>